--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
+<html lang="en"> 
+   <head>
+      
     <meta charset="UFT-8">
     <meta http-equiv="X-UA-Conpatible"content="IE=edge">
     <meta name="viewport"content="widht=device-widht,initial-Scale=1.0">
@@ -73,7 +74,7 @@
         </div>
         </div>
         </div>
-        <!---->... ............services........... ...->
+        <!... ............services........... ...>
         <div id="services">
         <div class="container">
         <h1 class="sub-title">My services</h1>
